--- a/RSP/index.html
+++ b/RSP/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>가위바위보</title>
+    <style>
+        #computer {
+            width: 142px;
+            height: 200px;
+            background-position: 0 0;
+        }
+        .btn {
+            height: 35px;
+            width: 50px;
+            margin-right: 5px;
+            margin-bottom: 5px;
+            font-size: 15px;
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
